Una linea de comentario

--- a/html/altaAdministrador.html
+++ b/html/altaAdministrador.html
@@ -18,6 +18,7 @@
         <div class="centered">
             <!-- Titulo -->
             <h3>Registrar Administrador</h3>
+            <!-- Formulario para registrar nuevo administrador -->
             <form id="administrador" method="post">
                 <div>
                     <!-- Input para Nombre -->
