--- a/html/reiniciarContrasena.html
+++ b/html/reiniciarContrasena.html
@@ -24,38 +24,50 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="./home.html">
+                    <!-- Titulo -->
                     <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <!-- Link a pestaña de Historia -->
                     <li><a href="./historia.html">Historia</a></li>
+                    <!-- Link a pestaña de Carreras -->
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <!-- Link para Iniciar Sesion -->
                     <li><a href="./login.html">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    
+    <!-- Titulo -->
     <h1>Reiniciar Contrase&ntilde;a</h1>
     <br>
+    <!-- Descripcion de reiniciar contraseña -->
     <p>Para reiniciar su contrase&ntilde;a, ingrese su direcci&oacute;n de correo debajo, si existe en nuestros registros, le enviaremos un
         email con un link para reiniciar su contrase&ntilde;a.</p>
         <br>
         <div>
+            <!-- Formulario para reiniciar contraseña -->
             <form id="preguntaRespuesta" method="POST">
+                <!-- Input de email -->
                 <input id="inputEmail" type="email" name="" value="" placeholder="Ingrese su direccion de correo aqui">
                 <br>
+                <!-- Input de pregunta -->
                 <input id="pregunta" type="text" name="" value="" placeholder="Ingrese su pregunta secreta aqui">
                 <br>
+                <!-- Input de repuesta -->
                 <input id="respuesta" type="text" name="" value="" placeholder="Ingrese su respuesta aqui">
                 <br>
+                <!-- Input de password -->
                 <input id="new_pass" type="password" name="" value="" placeholder="Ingrese su nueva contrase&ntilde;a aqui">
                 <br>
+                <!-- Input de confirmacion de password -->
                 <input id="confirm_pass" type="password" name="" value="" placeholder="Confirme su nueva contrase&ntilde;a aqui">
                 <br>
                 <br>
+                <!-- Boton para guardar datos -->
                 <button id="submit">Enviar</button>
             </form>
         </div>
