--- a/html/home.html
+++ b/html/home.html
@@ -23,20 +23,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="./home.html"><strong>Universys</strong> Home</a>
+                <a class="navbar-brand" href="./home.html">
+                    <!-- Titulo -->
+                    <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <!-- Link a pestaña de Historia -->
                     <li><a href="./historia.html">Historia</a></li>
+                    <!-- Link a pestaña de Carreras -->
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <!-- Link para Iniciar Sesion -->
                     <li><a href="#">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    <!-- Titulo -->
     <h1>Bienvenido a Universys</h1>
 
 
