--- a/html/carreras.html
+++ b/html/carreras.html
@@ -24,15 +24,19 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="./home.html">
+                    <!-- Titulo -->
                     <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <!-- Link a pestaña de Historia -->
                     <li><a href="./historia.html">Historia</a></li>
+                    <!-- Link a pestaña de Carreras -->
                     <li class="active"><a href="./carreras.html">Carreras<span class="sr-only">(current)</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <!-- Link para Iniciar Sesion -->
                         <a href="#">Iniciar Sesi&oacute;n</a>
                     </li>
                 </ul>
@@ -43,44 +47,57 @@
     <section class="contenedor">
         <!-- Lista de Carreras -->
         <div class="listaCarreras">
+            <!-- Titulo -->
             <h1>Carreras</h1>
             <br>
             <ul>
+                <!-- Abogacia -->
                 <li>
                     <a href="../Carreras/html/abogacia.html">Abogacia</a>
                 </li>
+                <!-- Administracion de Empresas -->
                 <li>
                     <a href="../Carreras/html/administracionDeEmpresas.html">Administraci&oacute;n de Empresas</a>
                 </li>
+                <!-- Agronomia -->
                 <li>
-                    <a href="">Agronomia</a>
+                    <a href="../Carreras/html/agronomia.html">Agronomia</a>
                 </li>
+                <!-- Arquitectura -->
                 <li>
-                    <a href="">Arquitectura</a>
+                    <a href="../Carreras/html/arquitectura.html">Arquitectura</a>
                 </li>
+                <!-- Bioquimica -->
                 <li>
-                    <a href="">Bioquimica</a>
+                    <a href="../Carreras/html/bioquimica.html">Bioquimica</a>
                 </li>
+                <!-- Ciencias Veterinarias -->
                 <li>
-                    <a href="">Ciencias Veterinarias</a>
+                    <a href="../Carreras/html/cienciasVeterinarias.html">Ciencias Veterinarias</a>
                 </li>
+                <!-- Contador Publico -->
                 <li>
-                    <a href="">Contador P&uacute;blico</a>
+                    <a href="../Carreras/html/contadorPublico.html">Contador P&uacute;blico</a>
                 </li>
+                <!-- Diseño Grafico -->
                 <li>
-                    <a href="">Dise&ntilde;o Grafico</a>
+                    <a href="../Carreras/html/disenoGrafico.html">Dise&ntilde;o Grafico</a>
                 </li>
+                <!-- Ingenieria Informatica -->
                 <li>
-                    <a href="">Ingenieria Informatica</a>
+                    <a href="../Carreras/html/ingenieriaInformatica.html">Ingenieria Informatica</a>
                 </li>
+                <!-- Licenciatura en Ciencia Politica -->
                 <li>
-                    <a href="">Licenciatura en Ciencia Politica</a>
+                    <a href="../Carreras/html/licenciaturaEnCienciaPolitica.html">Licenciatura en Ciencia Politica</a>
                 </li>
+                <!-- Marketing -->
                 <li>
-                    <a href="">Marketing</a>
+                    <a href="../Carreras/html/marketing.html">Marketing</a>
                 </li>
+                <!-- Medicina -->
                 <li>
-                    <a href="">Medicina</a>
+                    <a href="../Carreras/html/medicina.html">Medicina</a>
                 </li>
             </ul>
         </div>
