--- a/html/historia.html
+++ b/html/historia.html
@@ -24,24 +24,31 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-                <a class="navbar-brand" href="./home.html"><strong>Universys</strong> Home</a>
+                <a class="navbar-brand" href="./home.html">
+                    <!-- Titulo -->
+                    <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <!-- Link a pestaña de Historia -->
                     <li class="active"><a href="#">Historia <span class="sr-only">(current)</span></a></li>
+                    <!-- Link a pestaña de Carreras -->
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <!-- Link para Iniciar Sesion -->
                     <li><a href="#">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    <!-- Descripcion de la universidad -->
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-6">
+                <!-- Titulo -->
                 <h3>What is Lorem Ipsum?</h3>
+                <!-- Relleno -->
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                 text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                 specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
@@ -50,7 +57,9 @@
                 of Lorem Ipsum.
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
+                <!-- Titulo -->
                 <h3>Why do we use it?</h3>
+                <!-- Relleno -->
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
                 using 'Content here, content here', making it look like readable English. Many desktop publishing packages
@@ -59,7 +68,9 @@
                 accident, sometimes on purpose (injected humour and the like).
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
+                <!-- Titulo -->
                 <h3>Where does it come from?</h3>
+                <!-- Relleno -->
                 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
                 from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College
                 in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
@@ -70,7 +81,9 @@
                 standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
+                <!-- Titulo -->
                 <h3>Where can I get some?</h3>
+                <!-- Relleno -->
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
                 injected humour, or randomised words which don't look even slightly believable. If you are going to use a
                 passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
