TODAS las carreras documentadas

--- a/Carreras/html/contadorPublico.html
+++ b/Carreras/html/contadorPublico.html
@@ -25,79 +25,101 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="../../html/home.html">
+                    <!-- Titulo -->
                     <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../../html/historia.html">Historia</a>
-                    </li>
+                            <!-- Link a pestaña de Historia -->
+                            <a href="../../html/historia.html">Historia</a>
+                        </li>
+                    <!-- Link a pestaña de Carreras -->
                     <li class="active"><a href="../../html/carreras.html">Carreras<span class="sr-only">(current)</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Iniciar Sesi&oacute;n</a>
-                    </li>
+                            <!-- Link para Iniciar Sesion -->
+                            <a href="#">Iniciar Sesi&oacute;n</a>
+                        </li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    
     <section class="contenedor">
         <!-- Lista de Carreras -->
         <div class="listaCarreras">
+            <!-- Titulo -->
             <h1>Carreras</h1>
             <br>
             <ul>
+                <!-- Abogacia -->
                 <li>
-                    <a href="../html/abogacia.html">Abogacia</a>
-                </li>
+                        <a href="../html/abogacia.html">Abogacia</a>
+                    </li>
+                <!-- Administracion de Empresas -->
                 <li>
-                    <a href="../html/administracionDeEmpresas.html">Administraci&oacute;n de Empresas</a>
-                </li>
+                        <a href="../html/administracionDeEmpresas.html">Administraci&oacute;n de Empresas</a>
+                    </li>
+                <!-- Agronomia -->
                 <li>
-                    <a href="../html/agronomia.html">Agronomia</a>
-                </li>
+                        <a href="../html/agronomia.html">Agronomia</a>
+                    </li>
+                <!-- Arquitectura -->
                 <li>
-                    <a href="../html/arquitectura.html">Arquitectura</a>
-                </li>
+                        <a href="../html/arquitectura.html">Arquitectura</a>
+                    </li>
+                <!-- Bioquimica -->
                 <li>
-                    <a href="../html/bioquimica.html">Bioquimica</a>
-                </li>
+                        <a href="../html/bioquimica.html">Bioquimica</a>
+                    </li>
+                <!-- Ciencias Veterinarias -->
                 <li>
-                    <a href="../html/cienciasVeterinarias.html">Ciencias Veterinarias</a>
-                </li>
+                        <a href="../html/cienciasVeterinarias.html">Ciencias Veterinarias</a>
+                    </li>
+                <!-- Contador Publico -->
                 <li>
-                    <a href="../html/contadorPublico.html">Contador P&uacute;blico</a>
-                </li>
+                        <a href="../html/contadorPublico.html">Contador P&uacute;blico</a>
+                    </li>
+                <!-- Diseño Grafico -->
                 <li>
-                    <a href="../html/disenoGrafico.html">Dise&ntilde;o Grafico</a>
-                </li>
+                        <a href="../html/disenoGrafico.html">Dise&ntilde;o Grafico</a>
+                    </li>
+                <!-- Ingenieria Informatica -->
                 <li>
-                    <a href="../html/ingenieriaInformatica.html">Ingenieria Informatica</a>
-                </li>
+                        <a href="../html/ingenieriaInformatica.html">Ingenieria Informatica</a>
+                    </li>
+                <!-- Licenciatura en Ciencia Politica -->
                 <li>
-                    <a href="../html/licenciaturaEnCienciaPolitica.html">Licenciatura en Ciencia Politica</a>
-                </li>
+                        <a href="../html/licenciaturaEnCienciaPolitica.html">Licenciatura en Ciencia Politica</a>
+                    </li>
+                <!-- Marketing -->
                 <li>
-                    <a href="../html/marketing.html">Marketing</a>
-                </li>
+                        <a href="../html/marketing.html">Marketing</a>
+                    </li>
+                <!-- Medicina -->
                 <li>
-                    <a href="../html/medicina.html">Medicina</a>
-                </li>
+                        <a href="../html/medicina.html">Medicina</a>
+                    </li>
             </ul>
         </div>
         <div class="carrera">
+            <!-- Titulo de Carrera -->
             <h2>Contador Publico</h2>
+            <!-- Imagen -->
             <img src="http://plazapalmardearamara.com/media/k2/items/cache/8376aace7af18ea8cafa499d7e69a6ec_XL.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
+                        <!-- Titulo de Descripcion -->
                         <h3>What is Lorem Ipsum?</h3>
+                        <!-- Descripcion -->
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                         text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
                         a type specimen book.
                     </div>
+                    <!-- Horarios Disponibles -->
                     <div class="col-sm-6 col-md-6 col-lg-12">
                         <h3>Turnos Disponibles:</h3>
                         <p>Ma&ntilde;ana: 7hs a 11hs</p>
