--- a/html/home.html
+++ b/html/home.html
@@ -36,7 +36,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!-- Link para Iniciar Sesion -->
-                    <li><a href="#">Iniciar Sesi&oacute;n</a></li>
+                    <li><a href="./login.html">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
