--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -10,9 +10,9 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../css/abmCatedras.css">
+    <link rel="stylesheet" href="../css/abms.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
-    <script src="../js/abmCatedras.js"></script>
+    <script src="../js/abms.js"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -129,7 +129,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <!-- Seleccion de Catedras -->
-                    <label>Catedras</label><select>
+                    <label>Catedras</label>
+                    <select>
                         <option value="">A</option>
                         <option value="">B</option>
                         <option value="">C</option>
@@ -137,7 +138,7 @@
                         <option value="">E</option>
                     </select>
                 </div>
-                
+
             </div>
         </div>
         <script>
