Cambié dos comentarios

--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -54,7 +54,7 @@
     <!-- Botón para modificar una catedra -->
     <button id="btnModificacion" type="button">Modificacion Nota</button>
     <br>
-    <!-- Dar de baja una nota -->
+    <!-- Dar de alta una nota -->
     <div class="alta">
         <!-- Titulo -->
         <h1>Alta de nota</h1>
@@ -118,7 +118,7 @@
             </script>
         </div>
     </div>
-    <!-- Dar de alta una catedra -->
+    <!-- Dar de baja una catedra -->
     <div class="baja">
         <!-- Titulo -->
         <h1>Baja de nota</h1>
