--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -219,7 +219,7 @@
             </script>
         </div>
     </div>
-    <!-- Botoon para guardar datos -->
+    <!-- Boton para guardar datos -->
     <button id="submit" type="submit">Guardar</button>
 
 
