Fix palabra en comment

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -90,7 +90,7 @@
       </script>
     </div>
   </div>
-  <!-- Modificar una catedra -->
+  <!-- Modificar una carrera -->
   <div class="modificacion">
     <!-- Titulo -->
     <h1>Modificacion de carrera</h1>
