--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ABM Catedras</title>
+  <title>ABM Carreras</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
   <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
@@ -82,7 +82,9 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <input type="text" name="" value="">
+          <select id="carrera">
+            <option></option>
+          </select>
         </div>
       </div>
       <script>
@@ -100,11 +102,13 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <input type="text" name="" value="">
+          <select id="carrera">
+            <option></option>
+          </select>
         </div>
       </div>
       <script>
-            var operacion = "modificacion";
+        var operacion = "modificacion";
       </script>
     </div>
   </div>
