--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -114,6 +114,21 @@
   </div>
   <!-- Botoon para guardar datos -->
   <button id="submit" type="submit">Guardar</button>
-
+  <script src="../js/register.js">
+    
+  </script>
+  <!-- Poblar select para modificacion y baja de datos -->
+<script>
+  $(document).ready(function() {
+    var instance = new RegisterControllerLocal();
+    var jsonCarreras = JSON.parse(instance.jsonCarreras);
+    $(jsonCarreras.carreras).each(function(elem) {
+      var objOption = document.createElement("option");
+      objOption.setAttribute("value", elem.id);
+      objOption.innerHTML = elem.carrera;
+      ("#carrera").appendChild(objOption);
+    })
+  })
+</script>
 </body>
 </html>
