--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -112,7 +112,7 @@
       </script>
     </div>
   </div>
-  <!-- Botoon para guardar datos -->
+  <!-- Boton para guardar datos -->
   <button id="submit" type="submit">Guardar</button>
   <script src="../js/register.js">
     
