se cambia el id del select por clases para poblar todos los selects a la vez

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -124,7 +124,7 @@
       var objOption = document.createElement("option");
       objOption.setAttribute("value", element.id);
       objOption.innerHTML = element.carrera;
-      $("#carrera").append(objOption);
+      $(".carrera").append(objOption);
     }, this);
   });
 </script>
